-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.3, 6.8.0
-
None
-
-
cf9c94e85 (dev), ce0349b41 (6.9)
A child window with the Qt.WindowDoesNotAcceptFocus flag set still steals focus from its parent window when it becomes visible.
Code sample:
import QtQuick Window { width: 640 height: 480 visible: true title: 'Main window' Window { id: childWindow width: 200 height: 200 title: 'Child window' //transientParent: null // it doesn't matter if it's set flags: Qt.WindowDoesNotAcceptFocus } TextInput { anchors.fill: parent onTextEdited: childWindow.visible = true } }
Steps to reproduce:
1. Click inside the main window to make TextInput active
2. Press any key
3. A child window will be shown
Actual results: The text input loses focus
Expected results: The text input doesn't lose the focus
- relates to
-
QTBUG-130756 [macOS] Clicking inside a child window with Qt.WindowDoesNotAcceptFocus flag makes the parent window active
-
- Reported
-
-
QTBUG-131712 [Windows] Qt::WindowDoesNotAcceptFocus flag affects the window decoration
-
- Reported
-
-
QTBUG-54886 Qt::WA_ShowWithoutActivating counterpart missing for QWindow
-
- Reported
-
-
QTBUG-131714 [Windows] Finishing system move activates the window even if Qt.WindowDoesNotAcceptFocus is set
-
- Closed
-
| For Gerrit Dashboard: QTBUG-130912 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 605541,3 | Show window without activating if WindowDoesNotAcceptFocus flag is set | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 630397,2 | Show window without activating if WindowDoesNotAcceptFocus flag is set | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |